03-deployment-strategies/canary-rollout-flavor-2/blue-deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: nginx
    track: stable
  name: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      run: nginx
      track: stable
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: nginx
        track: stable
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: nginx
        volumeMounts:
        - mountPath: /usr/share/nginx/html/index.html
          subPath: blue.html
          name: web-page
        - mountPath: /etc/nginx/conf.d/blue.conf
          subPath: blue.conf
          name: web-page
      volumes:
       - name: web-page
         configMap:
           name: blue-web-page
