03-deployment-strategies/canary-rollout-flavor-2/canary-green-deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-canary
spec:
  selector:
   run: nginx
   track: canary
  type: ClusterIP
  ports:
   - name: http
     protocol: TCP
     port: 80

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: nginx
    track: canary
  name: nginx-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      run: nginx
      track: canary
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: nginx
        track: canary
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: nginx
        volumeMounts:
        - mountPath: /usr/share/nginx/html/index.html
          subPath: blue.html
          name: web-page
        - mountPath: /etc/nginx/conf.d/blue.conf
          subPath: blue.conf
          name: web-page
      volumes:
       - name: web-page
         configMap:
           name: green-web-page
