03-deployment-strategies/canary-rollout-flavor-2/nginx-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
   run: nginx
   track: stable
  type: ClusterIP
  ports:
   - name: http
     protocol: TCP
     port: 80
